@@ -1,29 +1,67 @@
-plugins {
-    id("java")
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("net.serenity-bdd:serenity-gradle-plugin:4.0.1")
+    }
 }
 
-group = "co.com.Automatizacion"
+plugins {
+    java
+    idea
+}
+
+apply(plugin = "net.serenity-bdd.serenity-gradle-plugin")
+
+group = "co.com.Automatizacion.AxxionSystem"
 version = "1.0-SNAPSHOT"
 
 repositories {
     mavenCentral()
 }
 
+val serenityVersion = "4.0.1"
+val serenityCucumberVersion = "5.3.1"
+
 dependencies {
-    testImplementation(platform("org.junit:junit-bom:5.10.0"))
-    testImplementation("org.junit.jupiter:junit-jupiter")
-    testRuntimeOnly("org.junit.vintage:junit-vintage-engine")
-    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
-    testImplementation("net.serenity-bdd:serenity-core:4.0.31")
-    testImplementation("net.serenity-bdd:serenity-cucumber:4.0.31")
-    testImplementation("net.serenity-bdd:serenity-screenplay:4.0.31")
-    testImplementation("net.serenity-bdd:serenity-screenplay-webdriver:4.0.31")
-    testImplementation("org.seleniumhq.selenium:selenium-java:4.15.0")
-    testImplementation("io.cucumber:cucumber-java:7.14.0")
-    testImplementation("io.cucumber:cucumber-junit:7.14.0")
-    testImplementation("net.serenity-bdd:serenity-junit:4.0.31")
+    implementation("org.hamcrest:hamcrest:2.2")
+    implementation("net.serenity-bdd:serenity-cucumber:$serenityCucumberVersion")
+    implementation("net.serenity-bdd:serenity-core:$serenityVersion")
+    implementation("net.serenity-bdd:serenity-junit:$serenityVersion")
+    implementation("net.serenity-bdd:serenity-screenplay:$serenityVersion")
+    implementation("net.serenity-bdd:serenity-screenplay-webdriver:$serenityVersion")
+    implementation("net.serenity-bdd:serenity-screenplay-rest:$serenityVersion")
+    implementation("net.serenity-bdd:serenity-ensure:2.0.49")
+    implementation("org.slf4j:slf4j-simple:2.0.18")
+    
+    implementation("com.jcraft:jsch:0.1.55")
+    implementation("log4j:log4j:1.2.17")
+    implementation("org.apache.poi:poi:4.1.2")
+    implementation("org.apache.poi:poi-ooxml:4.1.2")
+    implementation("org.apache.commons:commons-math3:3.6.1")
+    
+    testImplementation("junit:junit:4.13.2")
 }
 
-tasks.test {
-    useJUnitPlatform()
+java {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+}
+
+tasks.withType<JavaCompile> {
+    options.encoding = "UTF-8"
+}
+
+
+tasks.withType<Test> {
+    useJUnit()
+    systemProperty("cucumber.publish.quiet", "true")
+    systemProperty("cucumber.junit-platform.naming-strategy", "long")
+    jvmArgs(
+        "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+        "--add-opens", "java.base/java.util=ALL-UNNAMED",
+        "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
+    )
+    finalizedBy("aggregate")
 }
